kustomization/components/cnpg-backup/networkpolicy/allow-backup-check-to-api-server.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    argocd.argoproj.io/hook: PreSync
    argocd.argoproj.io/hook-delete-policy: HookSucceeded
    argocd.argoproj.io/sync-wave: "0"
  name: allow-backup-check-to-api-server-networkpolicy
spec:
  egress:
    - ports:
        - port: 443
        - port: 6443
      to:
        - ipBlock:
            cidr: 172.17.0.1/32
  podSelector:
    matchLabels:
      app.kubernetes.io/component: wait-for-backup
  policyTypes:
    - Egress
