kustomization/components/cnpg-backup/networkpolicy/allow-cluster-to-api-server.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cluster-to-api-server-networkpolicy
spec:
  egress:
    - ports:
        - port: 443
        - port: 6443
      to:
        - ipBlock:
            cidr: 172.17.0.1/32
  podSelector:
    matchLabels:
      app.kubernetes.io/managed-by: cloudnative-pg
      cnpg.io/podRole: instance
  policyTypes:
    - Egress
