kustomization/components/cnpg-backup/networkpolicy/allow-cluster-to-coredns.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cluster-to-coredns-networkpolicy
spec:
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: kube-dns
  podSelector:
    matchLabels:
      app.kubernetes.io/managed-by: cloudnative-pg
      cnpg.io/podRole: instance
  policyTypes:
    - Egress
